Updating index + gitignore

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -1,1 +1,13 @@
-HTML    
+<!DOCTYPE html>
+<html> 
+    <head>
+        <meta charset="UTF-8">
+        <title> HTML Test </title>
+    </head>
+<body>
+    Probando... 1, 2, 3...
+    Probando...
+    Probando
+</body>
+
+    </html>
