--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -7,11 +7,112 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title> Stones! </title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="jumbotron">
+        <h1>Stones</h1>
+    </div>
+    <div class="container">    
+        <div class="row">
+            <div class="col-sm-4">
+                <p>
+                <h3>Lorem ipsum dolor sit amet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                <h3>Lorem ipsum dolor sit amet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                <h3>Lorem ipsum dolor sit amet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </p>
+            </div>
+        </div>
+        <div class="d-flex flex-wrap">
+            <div class="card-stone d-flex flex-column">
+                <div>
+                <h4>Lorem ipsum dolor sit amet</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
+                   Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+                </div>
+                <div><button type="button" class="btn btn-dark">CLICK</button></div>
+            </div>
+            <div class="card-stone d-flex flex-column">
+                <div>
+                <h4>Lorem ipsum dolor sit amet</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+                <div><button type="button" class="btn btn-dark">Dark</button></div>
+            </div>
+            <div class="card-stone d-flex flex-column">
+                <div>
+                <h4>Lorem ipsum dolor sit amet</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
+                   Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+                </div>
+                <div><button type="button" class="btn btn-dark">Dark</button></div>
+            </div>
+            <div class="card-stone d-flex flex-column">
+                <div>
+                <h4>Lorem ipsum dolor sit amet</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+                <div><button type="button" class="btn btn-dark">Dark</button></div>
+            </div>
+            <div class="card-stone d-flex flex-column">
+                <div>
+                <h4>Lorem ipsum dolor sit amet</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+                <div><button type="button" class="btn btn-dark">Dark</button></div>
+            </div>
+            <div class="card-stone d-flex flex-column">
+                <div>
+                <h4>Lorem ipsum dolor sit amet</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+                <div><button type="button" class="btn btn-dark">Dark</button></div>
+            </div>
+            <div class="card-stone d-flex flex-column">
+                <div>
+                <h4>Lorem ipsum dolor sit amet</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+                <div><button type="button" class="btn btn-dark">Dark</button></div>
+            </div>
+            <div class="card-stone d-flex flex-column">
+                <div>
+                <h4>Lorem ipsum dolor sit amet</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+                <div><button type="button" class="btn btn-dark">Dark</button></div>
+            </div>
+        </div>
+      </div>
+
+    <footer">
+        <div  class="row">
+            <div class="col-sm-4 d-flex flex-column">
+                <h2> Stones! </h2>
+            </div>
+            <div class="col-sm-4 d-flex flex-column">
+                <h2> Stones! </h2>
+            </div>
+            <div class="col-sm-4 d-flex flex-column align-items-end">
+                <h2> Stones! </h2>
+            </div>
+        </div>
+    </footer>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
