--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -11,11 +11,25 @@
     <title> Stones! </title>
   </head>
   <body>
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+          <a class="navbar-brand" href="#"> Stones! </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active"><a class="nav-link" href="#"> Home </a> </li>
+                <li class="nav-item"><a class="nav-link" href="about.html"> Nosotros </a></li>
+                <li class="nav-item"><a class="nav-link" href="#"> Precios </a></li>
+                <li class="nav-item"><a class="nav-link" href="#"> Contacto </a></li>
+              </ul>
+          </div>
+      </nav>
     <div class="jumbotron">
         <h1>Stones</h1>
     </div>
     <div class="container">    
-        <div class="row">
+        <div class="row  mensajes">
             <div class="col-sm-4">
                 <p>
                 <h3>Lorem ipsum dolor sit amet</h3>
@@ -99,15 +113,20 @@
         </div>
       </div>
 
-    <footer">
-        <div  class="row">
-            <div class="col-sm-4 d-flex flex-column">
-                <h2> Stones! </h2>
+    <footer>
+        <div  class="row align-items-center">
+            <div class="col-sm-4 d-flex flex-column justify-self-center">
+                <a href="#">Twitter</a>
+                <a href="#">Facebook</a>
             </div>
             <div class="col-sm-4 d-flex flex-column">
-                <h2> Stones! </h2>
+                <address>
+                    <p> Lorem ipsum dolor sit.</p>
+                    <p> Lorem ipsum dolor sit.</p>
+                    <p> Lorem ipsum dolor sit.</p>
+                </address>
             </div>
-            <div class="col-sm-4 d-flex flex-column align-items-end">
+            <div class="col-sm-4 d-flex flex-column">
                 <h2> Stones! </h2>
             </div>
         </div>
