--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,26 +9,31 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title> Stones! </title>
-  </head>
-  <body>
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-          <a class="navbar-brand" href="#"> Stones! </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+</head>
+<body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#"> Stones! </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="#"> Home </a> </li>
-                <li class="nav-item"><a class="nav-link" href="about.html"> Nosotros </a></li>
+                <li class="nav-item"><a class="nav-link" href="nosotros.html"> Nosotros </a></li>
                 <li class="nav-item"><a class="nav-link" href="#"> Precios </a></li>
                 <li class="nav-item"><a class="nav-link" href="#"> Contacto </a></li>
-              </ul>
-          </div>
-      </nav>
+            </ul>
+        </div>
+    </nav>
     <div class="jumbotron">
-        <h1>Stones</h1>
+        <h1>Stones Logo </h1>
     </div>
-    <div class="container">    
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item active" aria-current="page"> Home </li>
+            </ol>
+        </nav>
         <div class="row  mensajes">
             <div class="col-sm-4">
                 <p>
@@ -54,7 +59,7 @@
                 <div>
                 <h4>Lorem ipsum dolor sit amet</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.
-                   Lorem ipsum dolor sit amet consectetur adipisicing.
+                Lorem ipsum dolor sit amet consectetur adipisicing.
                 </p>
                 </div>
                 <div><button type="button" class="btn btn-dark">CLICK</button></div>
@@ -70,7 +75,7 @@
                 <div>
                 <h4>Lorem ipsum dolor sit amet</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.
-                   Lorem ipsum dolor sit amet consectetur adipisicing.
+                Lorem ipsum dolor sit amet consectetur adipisicing.
                 </p>
                 </div>
                 <div><button type="button" class="btn btn-dark">Dark</button></div>
@@ -111,7 +116,7 @@
                 <div><button type="button" class="btn btn-dark">Dark</button></div>
             </div>
         </div>
-      </div>
+    </div>
 
     <footer>
         <div  class="row align-items-center">
@@ -138,5 +143,5 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  </body>
+</body>
 </html>
