--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
     <title> Stones! </title>
 </head>
 <body>
@@ -62,14 +63,14 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing.
                 </p>
                 </div>
-                <div><button type="button" class="btn btn-dark">CLICK</button></div>
+                <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
             <div class="card-stone d-flex flex-column">
                 <div>
                 <h4>Lorem ipsum dolor sit amet</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
-                <div><button type="button" class="btn btn-dark">Dark</button></div>
+                <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
             <div class="card-stone d-flex flex-column">
                 <div>
@@ -78,42 +79,42 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing.
                 </p>
                 </div>
-                <div><button type="button" class="btn btn-dark">Dark</button></div>
+                <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
             <div class="card-stone d-flex flex-column">
                 <div>
                 <h4>Lorem ipsum dolor sit amet</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
-                <div><button type="button" class="btn btn-dark">Dark</button></div>
+                <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
             <div class="card-stone d-flex flex-column">
                 <div>
                 <h4>Lorem ipsum dolor sit amet</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
-                <div><button type="button" class="btn btn-dark">Dark</button></div>
+                <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
             <div class="card-stone d-flex flex-column">
                 <div>
                 <h4>Lorem ipsum dolor sit amet</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
-                <div><button type="button" class="btn btn-dark">Dark</button></div>
+                <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
             <div class="card-stone d-flex flex-column">
                 <div>
                 <h4>Lorem ipsum dolor sit amet</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
-                <div><button type="button" class="btn btn-dark">Dark</button></div>
+                <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
             <div class="card-stone d-flex flex-column">
                 <div>
                 <h4>Lorem ipsum dolor sit amet</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
-                <div><button type="button" class="btn btn-dark">Dark</button></div>
+                <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
         </div>
     </div>
@@ -125,10 +126,10 @@
                 <a href="#">Facebook</a>
             </div>
             <div class="col-sm-4 d-flex flex-column">
-                <address>
-                    <p> Lorem ipsum dolor sit.</p>
-                    <p> Lorem ipsum dolor sit.</p>
-                    <p> Lorem ipsum dolor sit.</p>
+                <address class="address-text">
+                    <p> <span class="oi oi-home footer-address-icon"></span> Lorem ipsum dolor </p>
+                    <p> <span class="oi oi-phone footer-address-icon"></span> +00 123 4567 </p>
+                    <p> <span class="oi oi-envelope-closed footer-address-icon"></span> Lorem.ipsum@dolor.sit</p>
                 </address>
             </div>
             <div class="col-sm-4 d-flex flex-column">
