--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -21,8 +21,8 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="#"> Home </a> </li>
                 <li class="nav-item"><a class="nav-link" href="nosotros.html"> Nosotros </a></li>
-                <li class="nav-item"><a class="nav-link" href="#"> Precios </a></li>
-                <li class="nav-item"><a class="nav-link" href="#"> Contacto </a></li>
+                <li class="nav-item"><a class="nav-link" href="precios.html"> Precios </a></li>
+                <li class="nav-item"><a class="nav-link" href="contacto.html"> Contacto </a></li>
             </ul>
         </div>
     </nav>
