--- a/Bootstrap/precios.html
+++ b/Bootstrap/precios.html
@@ -19,8 +19,8 @@
           <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html"> Home </a> </li>
-                <li class="nav-item active"><a class="nav-link" href="#"> Nosotros </a></li>
-                <li class="nav-item"><a class="nav-link" href="precios.html"> Precios </a></li>
+                <li class="nav-item"><a class="nav-link" href="nosotros.html"> Nosotros </a></li>
+                <li class="nav-item  active"><a class="nav-link" href="#"> Precios </a></li>
                 <li class="nav-item"><a class="nav-link" href="contacto.html"> Contacto </a></li>
               </ul>
           </div>
@@ -32,7 +32,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="./index.html"> Home </a></li>
-                <li class="breadcrumb-item active" aria-current="page"> Nosotros </li>
+                <li class="breadcrumb-item active" aria-current="page"> Precios </li>
             </ol>
         </nav>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
