Updating cards and css styles

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -27,8 +27,10 @@
         </div>
     </nav>
     <div class="jumbotron">
-        <h1>Stones Logo </h1>
+        <img class="img-fluid mt-5" src="images/banner.jpg">
     </div>
+    </div>
+    
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -38,81 +40,109 @@
         <div class="row  mensajes">
             <div class="col-sm-4">
                 <p>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <h3>Lorem ipsum</h3>
+                <p>Lorem ipsum dolor sit amet</p>
                 </p>
             </div>
             <div class="col-sm-4">
                 <p>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <h3>Lorem ipsum</h3>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
                 </p>
             </div>
             <div class="col-sm-4">
                 <p>
-                <h3>Lorem ipsum dolor sit amet</h3>
+                <h3>Lorem ipsum</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                 </p>
             </div>
         </div>
         <div class="d-flex flex-wrap">
-            <div class="card-stone d-flex flex-column">
-                <div>
-                <h4>Lorem ipsum dolor sit amet</h4>
+            <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
+                <div class="card-body">
+                <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                <h6 class="card-subtitle text-muted mb-2">Lorem</h6>
+                <img class="card-img mb-2" src="images/lorem_img.jpeg" alt="img">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.
                 Lorem ipsum dolor sit amet consectetur adipisicing.
                 </p>
                 </div>
                 <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
-            <div class="card-stone d-flex flex-column">
-                <div>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                </div>
-                <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
-            </div>
-            <div class="card-stone d-flex flex-column">
-                <div>
-                <h4>Lorem ipsum dolor sit amet</h4>
+            <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
+                <div class="card-body">
+                <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                <h6 class="card-subtitle text-muted mb-2">Lorem</h6>
+                <img class="card-img-top mb-2" src="images/lorem_img.jpeg" alt="img">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.
                 Lorem ipsum dolor sit amet consectetur adipisicing.
                 </p>
                 </div>
                 <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
-            <div class="card-stone d-flex flex-column">
-                <div>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
+                <div class="card-body">
+                <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                <h6 class="card-subtitle text-muted mb-2">Lorem</h6>
+                <img class="card-img-top mb-2" src="images/lorem_img.jpeg" alt="img">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
                 </div>
                 <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
-            <div class="card-stone d-flex flex-column">
-                <div>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
+                <div class="card-body">
+                <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                <h6 class="card-subtitle text-muted mb-2">Lorem</h6>
+                <img class="card-img-top mb-2" src="images/lorem_img.jpeg" alt="img">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
                 </div>
                 <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
-            <div class="card-stone d-flex flex-column">
-                <div>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
+                <div class="card-body">
+                <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                <h6 class="card-subtitle text-muted mb-2">Lorem</h6>
+                <img class="card-img-top mb-2" src="images/lorem_img.jpeg" alt="img">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
                 </div>
                 <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
-            <div class="card-stone d-flex flex-column">
-                <div>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
+                <div class="card-body">
+                <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                <h6 class="card-subtitle text-muted mb-2">Lorem</h6>
+                <img class="card-img-top mb-2" src="images/lorem_img.jpeg" alt="img">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
                 </div>
                 <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
-            <div class="card-stone d-flex flex-column">
-                <div>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
+                <div class="card-body">
+                <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                <h6 class="card-subtitle text-muted mb-2">Lorem</h6>
+                <img class="card-img-top mb-2" src="images/lorem_img.jpeg" alt="img">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+                </div>
+                <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
+            </div>
+            <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
+                <div class="card-body">
+                <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                <h6 class="card-subtitle text-muted mb-2">Lorem</h6>
+                <img class="card-img-top mb-2" src="images/lorem_img.jpeg" alt="img">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
                 </div>
                 <div><button type="button" class="btn btn-dark"><span class="oi oi-thumb-up"></span> Check </button></div>
             </div>
