--- a/Bootstrap/precios.html
+++ b/Bootstrap/precios.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
     <title> Stones! </title>
   </head>
   <body>
@@ -35,8 +36,48 @@
                 <li class="breadcrumb-item active" aria-current="page"> Precios </li>
             </ol>
         </nav>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Qui cupiditate quas minima provident veritatis magni non repellat neque placeat eos?</p>
+        <div class="table-responsive">
+        <table class="table table-dark table-striped">
+            <thead>
+                <th>Dureza</th>
+                <th>Ubatuba</th>
+                <th>Giallo</th>
+                <th>Emperador Black</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><span class="oi oi-shield"></span></td>
+                    <td>10</td>
+                    <td>20</td>
+                    <td>30</td>
+                </tr>
+                <tr>
+                    <td><span class="oi oi-shield"></span>
+                        <span class="oi oi-shield"></span></td>
+                    <td>20</td>
+                    <td>30</td>
+                    <td>40</td>
+                </tr>
+                <tr>
+                    <td><span class="oi oi-shield"></span>
+                        <span class="oi oi-shield"></span>
+                        <span class="oi oi-shield"></span></td>
+                    <td>30</td>
+                    <td>40</td>
+                    <td>50</td>
+                </tr>
+                <tr>
+                    <td><span class="oi oi-shield"></span>
+                        <span class="oi oi-shield"></span>
+                        <span class="oi oi-shield"></span>
+                        <span class="oi oi-shield"></span></td>
+                    <td>70</td>
+                    <td>80</td>
+                    <td>90</td>
+                </tr>
+            </tbody>
+        </table>
+        </div>
     </div>
 
     <footer>
